# CacheSimulator

./: .gitignore  CacheSimulator.cabal  readme.md  stack.yaml
app/: Main.hs
src/: BeladyCache.hs  Cache.hs  CacheSize.hs  Car.hs  Clock.hs  Fifo.hs  File.hs  IdealCache.hs  Lfu.hs  Lru2Q.hs  LruHash.hs  Mfu.hs  Request.hs  SimpleCaches.hs
src/Clock/: Car.hs  Car2.hs  Cart.hs  CartClock.hs  Clock.hs  ClockCache.hs
src/Lru/: Lru2Q.hs  LruHash.hs
src/Util/: AccessFrequency.hs  AverageFileSize.hs  CacheSize.hs  FileSizeStatistic.hs  MathUtil.hs
src/Utils/: MathUtil.hs
test/: BeladyCacheSpec.hs  CarSpec.hs  ClockSpec.hs  FifoSpec.hs  IdealCacheSpec.hs  LfuSpec.hs  Lru2QSpec.hs  LruHashSpec.hs  MfuSpec.hs
test/Clock/: CarSpec.hs  CartSpec.hs  ClockSpec.hs
test/Lru/: Lru2QSpec.hs  LruHashSpec.hs
test/Util/: AccessFrequencySpec.hs  AverageFileSizeSpec.hs  FileSizeStatisticSpec.hs  MathUtilSpec.hs
test/Utils/: MathUtilSpec.hs
