name:                CacheSimulator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/CacheSimulator#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Util.CacheSize
                     , Request
                     , File
                     , Cache
                     , SimpleCaches
                     , Lru.LruHash
                     , Mfu
                     , Fifo
                     , Lru.Lru2Q
                     , Clock.Clock
                     , Clock.Car
                     , Clock.Car2
                     , Clock.CartClock
                     , Clock.Cart
                     , Clock.ClockCache
                     , Util.MathUtil
                     , Util.FileSizeStatistic
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers >= 0.5.9.1
                     , vector
                     , psqueues
  default-language:    Haskell2010

executable CacheSimulator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N8 -O2 -optc-O3 -optc-ffast-math -Wall
  build-depends:       base
                     , CacheSimulator
                     , time
                     , optparse-applicative
  default-language:    Haskell2010

test-suite CacheSimulator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , hpc
                     , QuickCheck
                     , containers >= 0.5.9.1
                     , CacheSimulator
  other-modules:       Lru.LruHashSpec
                     , MfuSpec
                     , FifoSpec
                     , Lru.Lru2QSpec
                     , Clock.ClockSpec
                     , Clock.CarSpec
                     , Clock.CartSpec
                     , Util.MathUtilSpec
                     , Util.FileSizeStatisticSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wocit/CacheSimulator
